examples/demo-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ndslabs-ingress
  namespace: demo
spec:
  tls:
  - hosts:
    - demo.ndslabs.org
    secretName: ndslabs-secret
  rules:
  - host: elk.demo.ndslabs.org
    http:
      paths:
      - path: /
        backend:
          serviceName: stk5cp-kibana
          servicePort: 5601
