examples/demo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ndslabs-ingress
  namespace: demo
spec:
  rules:
  - host: elk.demo.test.ndslabs.org
    http:
      paths:
      - path: /
        backend:
          serviceName: stk5cp-kibana
          servicePort: 5601
