examples/terra-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ndsl-ingress
  namespace: terra
spec:
  rules:
  - host: clowder.terra.ndslabs.org
    http:
      paths:
      - path: /
        backend:
          serviceName: srz4wj-clowder
          servicePort: 9000
